--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,17 @@
     <string name="app_name">BDOTodo</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="category_entry">
+        <item>카테고리 선택</item>
+        <item>카테고리1</item>
+        <item>카테고리2</item>
+        <item>카테고리3</item>
+        <item>카테고리4</item>
+        <item>카테고리5</item>
+        <item>카테고리6</item>
+    </string-array>
+    <string-array name="task_and_or">
+        <item>또는</item>
+        <item>그리고</item>
+    </string-array>
 </resources>
